Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "string.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -46,11 +47,12 @@
         "outputId": "0d2f9927-11fb-40c3-ebee-87f29b791882"
       },
       "source": [
+        "# list slicing\n",
         "s = 'abcdef'\n",
-        "print(s[0], s[5], s[-1], s[-6])\n",
-        "print(s[1:3], s[1:], s[:3], s[:])"
+        "print(s[0], s[5], s[-1], s[-6])  # [-n]은 뒤에서 n번째\n",
+        "print(s[1:3], s[1:], s[:3], s[:])  # [n, m]은 n번째부터 m-1번째까지"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6fabc1ff-3ce9-4d33-ccfa-3650283bef50"
+        "outputId": "c63d2848-f902-4311-d88f-4692d8e1a2d6"
       },
       "source": [
         "n = [100, 200, 300]\n",
@@ -98,9 +100,9 @@
         "outputId": "c10651ee-562a-4242-cbcc-f7e8dc53edb3"
       },
       "source": [
-        "len(s)"
+        "len(s)  # s라는 리스트의 길이"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +131,7 @@
       "source": [
         "s[1]+s[3]+s[4:]*10"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,9 +161,9 @@
         "outputId": "1bca7731-40b8-4cb7-8200-5b422e20f86f"
       },
       "source": [
-        "s.upper()"
+        "s.upper()  # 문자열을 대문자로 바꾸는 함수"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,16 +188,25 @@
         "id": "NH4kiUqBurKg",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 69
         },
-        "outputId": "c74dea26-0158-4aa7-8f09-e1da8d603bf7"
+        "outputId": "801e71d6-1b5c-44dd-e3f9-99c04b7b9579"
       },
       "source": [
-        "s = ' this is a house built this year.\\n' \t\n",
+        "s = 'this is a house built this year.\\n' \t\n",
+        "print(s)\n",
         "s"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "this is a house built this year.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -203,36 +214,7 @@
               "type": "string"
             },
             "text/plain": [
-              "' this is a house built this year.\\n'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fLQKJxqgurKg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6a08a0df-be22-462d-fa9e-848aa9cf7ebe"
-      },
-      "source": [
-        "result = s.find('house') \t    # index of first instance of string t inside s (-1 if not found)\n",
-        "result"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "11"
+              "'this is a house built this year.\\n'"
             ]
           },
           "metadata": {
@@ -245,26 +227,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q8gAMAnFurKh",
-        "outputId": "36b66681-67a4-4958-cbfd-cd9e57529ef1"
+        "id": "fLQKJxqgurKg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fc5aae9f-3bcc-472f-e58b-0a9c9e443a3d"
       },
       "source": [
-        "result = s.find('this')\t    # index of last instance of string t inside s (-1 if not found)\n",
+        "result = s.find('house') \t    # index of first instance of string t inside s (-1 if not found)\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "10"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8gAMAnFurKh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a9e91b2-d32c-4ef7-c7f6-e01fd06e04dc"
+      },
+      "source": [
+        "result = s.find('this')\t    # index of last instance of string t inside s (-1 if not found)\n",
+        "result"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -272,25 +286,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "hEP3BGLIurKh",
-        "outputId": "a62e6a3a-eb2d-4333-cb13-7cac15ed6451"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "52a352e8-191a-4318-ea5d-f0f1cb5a5300"
       },
       "source": [
-        "result = s.rindex('this')        # like s.find(t) except it raises ValueError if not found\n",
+        "result = s.rindex('year')        # like s.find(t) except it raises ValueError if not found\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "23"
+              "27"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
