Colaboratory를 통해 생성됨

--- a/20210317.ipynb
+++ b/20210317.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20210317.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9pLps4dPBl0dBFL1fz1YQ",
+      "authorship_tag": "ABX9TyNjiC/AbIIk4ZaoZA187RqL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/schneeball1230/class2021Spring/blob/main/20210317.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yXbPrEr4wM3m"
+      },
+      "source": [
+        "## for for if 루프"
       ]
     },
     {
@@ -57,6 +66,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W6GXAF87wdAM"
+      },
+      "source": [
+        "## loop-list"
       ]
     },
     {
