Colaboratory를 통해 생성됨

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -43,7 +43,7 @@
         "outputId": "c32cc600-3c42-4dc2-b77d-84782e8fe65a"
       },
       "source": [
-        "a = 1; print(type(a))"
+        "a = 1; print(type(a))  # a의 type"
       ],
       "execution_count": null,
       "outputs": [
@@ -63,7 +63,7 @@
         "outputId": "713e5491-c822-43d7-ec7b-a00348e02708"
       },
       "source": [
-        "a = 1; a = float(a); print(type(a))"
+        "a = 1; a = float(a); print(type(a))  # "
       ],
       "execution_count": null,
       "outputs": [
