Colaboratory를 통해 생성됨

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "numpy.ipynb의 사본",
+      "name": "numpy.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "v2r4x2usShBH",
@@ -68,17 +68,20 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xJS2wUSzShBB",
-        "outputId": "fb8bed28-3194-4ed9-a808-1045a175aa17"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1d3bb09-e11c-490e-cd63-622305415985"
       },
       "source": [
-        "np.empty([2,3], dtype='int')"
+        "np.empty([2,3], dtype='int')  # 행 2, 열 3의 빈 array 생성"
       ],
       "execution_count": null,
       "outputs": [
@@ -86,14 +89,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[8, 0, 0],\n",
-              "       [0, 0, 0]])"
+              "array([[94419323142480,              0,              0],\n",
+              "       [             0,              0,              0]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -101,10 +104,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "XKkV6Am7ShBB",
-        "outputId": "baf7822e-0260-4902-a16b-3d38e36f8e26"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e0663f90-7ca4-43e4-d1ac-988bd08d4793"
       },
       "source": [
-        "np.zeros([2,3])"
+        "np.zeros([2,3])  # 행 2, 열 3의 0으로 된 array 생성"
       ],
       "execution_count": null,
       "outputs": [
@@ -119,7 +125,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -133,9 +139,9 @@
         "outputId": "b6354d35-728c-4e06-830e-08ad7307ad23"
       },
       "source": [
-        "np.arange(0,10, 2)  # arange는 (a, b, c) 일 때 b 포함하지 않음"
+        "np.arange(0, 10, 2)  # np.arange(start, stop, step) 반열린구간 [start, stop)에서 step의 크기만큼 일정하게 떨어져 있는 숫자들을 array 형태로 반환"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +167,7 @@
         "outputId": "e9f7844f-a4a7-4916-a7c0-663c5d172e32"
       },
       "source": [
-        "np.linspace(0, 10, 11) #linspace는 (a, b, c) 일 때 b 포함"
+        "np.linspace(0, 10, 11) # np.linspace(start, stop, num) 닫힌 구간 [start, stop]에서 원소가 num개인, 일정한 간격의 array 형태로 반환"
       ],
       "execution_count": null,
       "outputs": [
@@ -213,7 +219,7 @@
         "outputId": "7ec4bd94-98a8-4cb4-db23-9ff5aa701195"
       },
       "source": [
-        "X.astype(np.float64)"
+        "X.astype(np.float64)  # x의 데이터타입 변경"
       ],
       "execution_count": null,
       "outputs": [
@@ -239,7 +245,7 @@
         "outputId": "bd479cad-6e00-4f8a-dabc-13303451fe8a"
       },
       "source": [
-        "np.zeros_like(X)"
+        "np.zeros_like(X)  # 앞서 선언한 x의 shape에 0 넣은 array "
       ],
       "execution_count": null,
       "outputs": [
@@ -265,9 +271,9 @@
         "outputId": "799a2917-1888-497f-bbc8-522c7a62415e"
       },
       "source": [
-        "data = np.random.normal(0,1, 100)\n",
+        "data = np.random.normal(0,1, 100)  # 평균 0, 폭 1인 정규분포를 이루는 데이터 100개\n",
         "print(data)\n",
-        "plt.hist(data, bins=10)\n",
+        "plt.hist(data, bins=10)  # 기둥 10개짜리 히스토그램\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -329,8 +335,8 @@
         "outputId": "ede95bce-8c9d-45d4-b523-85158663b21d"
       },
       "source": [
-        "X = np.ones([2, 3, 4]) # 2*3*4의 tensor 이므로 1은 총 2*3*4개\n",
-        "X                      # np.ones([2, 3, 4]) = 3행 4열의 행렬 2개로 이루어진 행렬"
+        "X = np.ones([2, 3, 4]) # 2*3*4의 tensor 이므로 원소는 총 2*3*4개\n",
+        "X                      # np.ones([2, 3, 4]) = 3행 4열의 행렬 2개로 이루어진 행렬 np.ones([n,m,l]) = m행 l열의 행렬 n개"
       ],
       "execution_count": null,
       "outputs": [
@@ -657,7 +663,7 @@
         "arr = np.random.random([5,2,3])\n",
         "arr"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
