Colaboratory를 통해 생성됨

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -703,7 +703,7 @@
         "print(len(arr))  # 길이(a)\n",
         "print(arr.shape) # (a, b, c)\n",
         "print(arr.ndim)  # 차원\n",
-        "print(arr.size)  # a + b + c\n",
+        "print(arr.size)  # a x b x c\n",
         "print(arr.dtype) # 원소의 자료형"
       ],
       "execution_count": null,
